Schedule poll from UI

--- a/language/en.json
+++ b/language/en.json
@@ -76,10 +76,14 @@
   "modal_bot_in_ch": ":white_check_mark: You can create poll in this channel",
   "task_list": "Found `{{poll_count}}` schedule(s).",
   "task_delete": "Poll ID: `{{poll_id}}`\n `{{deleted_count}}` schedule(s) deleted.",
-  "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nCron Expression:: `{{cron_string}}`\nMax run count: `{{run_max}}`\nNOTE: THIS IS BETA Feature!",
+  "task_delete_multiple": "`{{deleted_count}}` disabled schedule(s) deleted.",
+  "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nCron Expression: `{{cron_string}}`\nMax run count: `{{run_max}}`\nNOTE: THIS IS BETA Feature!",
   "task_scheduled_with_cron": "Recurring poll: enabled (Cron: `{{cron}}`)\n:warning: Please note that recurring poll is NOT guarantee in this server in case of server get update and it not compatable with previous version of recurring task.",
   "task_scheduled_when": "When:",
-  "task_scheduled_when_note": "To schedule or recurring the poll type `/{{slack_command}} schedule create`",
+  "task_scheduled_when_note": "To schedule and recurring the poll type `/{{slack_command}} schedule create`",
+  "task_scheduled_now": "Now",
+  "task_scheduled_later": "Select time",
+  "task_scheduled_post_on": "Post on:",
   "task_usage_help": "Usage:\n`/{{slack_command}} schedule create [POLL_ID] [TS] [CH_ID] \"[CRON_EXP]\" [MAX_RUN]`\n`/{{slack_command}} schedule delete [POLL_ID]`\n`/{{slack_command}} schedule list_self`\nMore detail:`/{{slack_command}} help`",
   "task_error_command_invalid": "Invalid command.",
   "task_error_poll_id_invalid": "Invalid Poll ID.",
