--- a/language/en.json
+++ b/language/en.json
@@ -77,8 +77,8 @@
   "task_list": "Found `{{poll_count}}` schedule(s).",
   "task_delete": "Poll ID: `{{poll_id}}`\n `{{deleted_count}}` schedule(s) deleted.",
   "task_delete_multiple": "`{{deleted_count}}` disabled schedule(s) deleted.",
-  "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nCron Expression: `{{cron_string}}`\nMax run count: `{{run_max}}`\nNOTE: THIS IS BETA Feature!",
-  "task_scheduled_with_cron": "Recurring poll: enabled (Cron: `{{cron}}`)\n:warning: Please note that recurring poll is NOT guarantee in this server in case of server get update and it not compatable with previous version of recurring task.",
+  "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nMax run count: `{{run_max}}`",
+  "task_scheduled_with_cron": "Recurring poll: enabled (Cron Expression: `{{cron}}`)\n:warning: If your scheduled is run more than once within `{{run_max_hrs}}` hours, Your scheduled will get disabled after first run.",
   "task_scheduled_when": "When:",
   "task_scheduled_when_note": "To schedule and recurring the poll type `/{{slack_command}} schedule create`",
   "task_scheduled_now": "Now",
