Fix Schedule/Recurring Poll timezone

--- a/language/en.json
+++ b/language/en.json
@@ -74,16 +74,17 @@
   "modal_ch_via_cmd_only": ":warning: Please type type /{{slack_command}} in the channel that you want to post poll then press enter.",
   "modal_bot_not_in_ch": ":x::x::x:\nBot not in selected channel please close this dialog and add @{{bot_name}} to that channel first \nor just type /{{slack_command}} in channel that you want to create this poll\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: You can create poll in this channel",
-  "task_list": "Found `{{poll_count}}` schedule(s).",
+  "task_list": "Found `{{poll_count}}` schedule(s).\nTo delete schedule, type `/{{slack_command}} schedule delete POLL_ID`\nTo delete all finished schedules, type `/{{slack_command}} schedule delete_done`",
   "task_delete": "Poll ID: `{{poll_id}}`\n `{{deleted_count}}` schedule(s) deleted.",
   "task_delete_multiple": "`{{deleted_count}}` disabled schedule(s) deleted.",
   "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nMax run count: `{{run_max}}`",
-  "task_scheduled_with_cron": "Recurring poll: enabled (Cron Expression: `{{cron}}`)\n:warning: If your scheduled is run more than once within `{{run_max_hrs}}` hours, Your scheduled will get disabled after first run.",
+  "task_scheduled_with_cron": "Recurring poll: enabled (Cron Expression: `{{cron}}` UTC Time Zone)\n:warning: If your scheduled is run more than once within `{{run_max_hrs}}` hours, Your scheduled will get disabled after first run.",
   "task_scheduled_when": "When:",
-  "task_scheduled_when_note": "To schedule and recurring the poll type `/{{slack_command}} schedule create`",
+  "task_scheduled_when_note": "For advanced schedule and recurring the poll type `/{{slack_command}} schedule create`",
   "task_scheduled_now": "Now",
   "task_scheduled_later": "Select time",
   "task_scheduled_post_on": "Post on:",
+  "task_scheduled_post_noti": "Your scheduled poll has been posted.\nPoll ID: `{{poll_id}}`\nCMD:`{{poll_cmd}}`\nScheduled on: `{{ts}}`",
   "task_usage_help": "Usage:\n`/{{slack_command}} schedule create [POLL_ID] [TS] [CH_ID] \"[CRON_EXP]\" [MAX_RUN]`\n`/{{slack_command}} schedule delete [POLL_ID]`\n`/{{slack_command}} schedule list_self`\nMore detail:`/{{slack_command}} help`",
   "task_error_command_invalid": "Invalid command.",
   "task_error_poll_id_invalid": "Invalid Poll ID.",
