Confirm diag on delete poll, Accept "Double Quotation" in question and choice

--- a/language/de.json
+++ b/language/de.json
@@ -29,6 +29,8 @@
   "btn_create": "Erstellen",
   "btn_cancel": "Abbrechen",
   "menu_text": "Menü",
+  "menu_title_confirm": "Bestätigen?",
+  "menu_are_you_sure": "Sind Sie sicher, dass Sie dies tun möchten?",
   "menu_close_poll": "Umfrage schließen",
   "menu_reopen_poll": "Umfrage wieder öffnen",
   "menu_delete_poll": "Umfrage löschen",
@@ -74,6 +76,8 @@
   "modal_ch_via_cmd_only": ":warning: Bitte tippe /{{slack_command}} im Kanal, in dem du die Umfrage posten möchtest, und drücke dann Enter.",
   "modal_bot_not_in_ch": ":x::x::x:\nBot nicht im ausgewählten Kanal. Bitte schließe diesen Dialog und füge @{{bot_name}} zu diesem Kanal hinzu \noder tippe einfach /{{slack_command}} im Kanal ein, in dem du diese Umfrage erstellen möchtest\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: Du kannst diese Umfrage in diesem Kanal erstellen",
+  "err_para_missing": "Erforderlicher Parameter {{parameter}} fehlt.",
+  "err_para_invalid": "Wert {{value}} für Parameter {{parameter}} ist ungültig.{{error_msg}}",
   "err_change_vote_poll_closed": "Du kannst deine Stimme in einer geschlossenen Umfrage nicht ändern.",
   "err_not_voted": "Du hast noch nicht abgestimmt",
   "err_close_other": "Du kannst keine Umfrage eines anderen Benutzers schließen.",
