--- a/language/es.json
+++ b/language/es.json
@@ -29,6 +29,8 @@
   "btn_create": "Crear",
   "btn_cancel": "Cancelar",
   "menu_text": "Menú",
+  "menu_title_confirm": "¿Confirmar?",
+  "menu_are_you_sure": "¿Estás seguro de que quieres hacer esto?",
   "menu_close_poll": "Cerrar la encuesta",
   "menu_reopen_poll": "Reabrir la encuesta",
   "menu_delete_poll": "Eliminar la encuesta",
@@ -74,6 +76,8 @@
   "modal_ch_via_cmd_only": ":warning: Por favor, escribe /{{slack_command}} en el canal en el que deseas publicar la encuesta y luego presiona enter.",
   "modal_bot_not_in_ch": ":x::x::x:\nEl bot no está en el canal seleccionado, por favor cierra este diálogo y agrega a @{{bot_name}} a ese canal primero \no simplemente escribe /{{slack_command}} en el canal en el que deseas crear esta encuesta\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: Puedes crear la encuesta en este canal",
+  "err_para_missing": "Falta el parámetro requerido {{parameter}}.",
+  "err_para_invalid": "Valor {{value}} para el parámetro {{parameter}} es inválido.{{error_msg}}",
   "err_change_vote_poll_closed": "No puedes cambiar tu voto en una encuesta cerrada.",
   "err_not_voted": "Aún no has votado",
   "err_close_other": "No puedes cerrar una encuesta de otro usuario.",
