--- a/language/fi.json
+++ b/language/fi.json
@@ -29,6 +29,8 @@
   "btn_create": "Luo",
   "btn_cancel": "Peruuta",
   "menu_text": "Valikko",
+  "menu_title_confirm": "Vahvista?",
+  "menu_are_you_sure": "Oletko varma, että haluat tehdä tämän?",
   "menu_close_poll": "Sulje kysely",
   "menu_reopen_poll": "Avaa kysely uudelleen",
   "menu_delete_poll": "Poista kysely",
@@ -74,6 +76,8 @@
   "modal_ch_via_cmd_only": ":warning: Kirjoita /{{slack_command}} kanavassa, johon haluat julkaista kyselyn, ja paina sitten Enter.",
   "modal_bot_not_in_ch": ":x::x::x:\nBottia ei ole valitussa kanavassa. Sulje tämä valintaikkuna ja lisää @{{bot_name}} ensin kyseiseen kanavaan \ntai kirjoita /{{slack_command}} kanavassa, johon haluat luoda tämän kyselyn\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: Voit luoda kyselyn tässä kanavassa",
+  "err_para_missing": "Vaadittu parametri {{parameter}} puuttuu.",
+  "err_para_invalid": "Arvo {{value}} parametrille {{parameter}} on virheellinen.{{error_msg}}",
   "err_change_vote_poll_closed": "Et voi muuttaa ääniäsi suljetussa kyselyssä.",
   "err_not_voted": "Et ole vielä äänestänyt",
   "err_close_other": "Et voi sulkea toisen käyttäjän kyselyä.",
