--- a/language/fr.json
+++ b/language/fr.json
@@ -29,6 +29,8 @@
   "btn_create": "Créer",
   "btn_cancel": "Annuler",
   "menu_text": "Menu",
+  "menu_title_confirm": "Confirmer?",
+  "menu_are_you_sure": "Êtes-vous sûr de vouloir faire cela?",
   "menu_close_poll": "Clôturer le sondage",
   "menu_reopen_poll": "Réouvrir le sondage",
   "menu_delete_poll": "Supprimer le sondage",
@@ -74,6 +76,8 @@
   "modal_ch_via_cmd_only": ":warning: Veuillez taper /{{slack_command}} dans le canal où vous souhaitez publier le sondage, puis appuyez sur entrée.",
   "modal_bot_not_in_ch": ":x::x::x:\nLe robot n'est pas dans le canal sélectionné. Veuillez fermer cette fenêtre de dialogue et ajouter @{{bot_name}} à ce canal en premier lieu \nou tapez simplement /{{slack_command}} dans le canal où vous souhaitez créer ce sondage\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: Vous pouvez créer un sondage dans ce canal",
+  "err_para_missing": "Le paramètre requis {{parameter}} est manquant.",
+  "err_para_invalid": "La valeur {{value}} pour le paramètre {{parameter}} est invalide.{{error_msg}}",
   "err_change_vote_poll_closed": "Vous ne pouvez pas changer votre vote sur un sondage fermé.",
   "err_not_voted": "Vous n'avez pas encore voté",
   "err_close_other": "Vous ne pouvez pas fermer un sondage créé par un autre utilisateur.",
