--- a/language/jp.json
+++ b/language/jp.json
@@ -29,6 +29,8 @@
   "btn_create": "作成する",
   "btn_cancel": "キャンセル",
   "menu_text": "メニュー",
+  "menu_title_confirm": "確認しますか？",
+  "menu_are_you_sure": "これを行いますか？",
   "menu_close_poll": "投票を閉じる",
   "menu_reopen_poll": "投票を再開する",
   "menu_delete_poll": "投票を削除する",
@@ -74,6 +76,8 @@
   "modal_ch_via_cmd_only": ":warning: 投票を投稿したいチャンネルで /{{slack_command}} を入力してからEnterを押してください。",
   "modal_bot_not_in_ch": ":x::x::x:\nボットが選択されたチャンネルにいないため、このダイアログを閉じて最初に@{{bot_name}}をそのチャンネルに追加するか、/{{slack_command}}を入力して、この投票を作成したいチャンネルに入力してください。\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: このチャンネルで投票を作成できます",
+  "err_para_missing": "必須パラメータ {{parameter}} がありません。",
+  "err_para_invalid": "パラメータ {{parameter}} の値 {{value}} は無効です。{{error_msg}}",
   "err_change_vote_poll_closed": "クローズされた投票の投票内容は変更できません。",
   "err_not_voted": "あなたはまだ投票していません",
   "err_close_other": "他のユーザーの投票をクローズすることはできません。",
