--- a/language/kr.json
+++ b/language/kr.json
@@ -19,13 +19,18 @@
   "info_need_help": "도움이 필요하세요? | <mailto:{{email}}|E-Mail> | <{{link}}|URL>\n잘못된 번역이 있다면 알려주세요. 수정하겠습니다!",
   "info_create_poll": "투표 생성",
   "info_command_source": ":information_source:",
+  "info_command_source_text": "이 투표를 생성하기 위한 명령:",
   "info_others_add_choice": "다른 선택지 추가하기...",
   "info_others_add_choice_hint": "여기에 새로운 선택지를 입력하세요",
   "btn_vote": "투표하기",
   "btn_add_choice": "+ 선택지 추가",
+  "btn_ok": "확인",
+  "btn_close": "닫기",
   "btn_create": "만들기",
   "btn_cancel": "취소",
   "menu_text": "메뉴",
+  "menu_title_confirm": "확인?",
+  "menu_are_you_sure": "이것을 하시겠습니까?",
   "menu_close_poll": "투표 마감",
   "menu_reopen_poll": "투표 다시 시작",
   "menu_delete_poll": "투표 삭제",
@@ -35,6 +40,7 @@
   "menu_poll_action": "투표 작업",
   "menu_user_action": "사용자 작업",
   "menu_user_self_vote": "나의 투표 보기",
+  "menu_command_info": "Command Info.",
   "menu_support": "지원",
   "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: 기여하기",
@@ -70,6 +76,8 @@
   "modal_ch_via_cmd_only": ":warning: 투표를 게시하려는 채널에서 /{{slack_command}}를 입력한 후 엔터를 누르십시오.",
   "modal_bot_not_in_ch": ":x::x::x:\n봇이 선택한 채널에 없습니다. 이 대화 상자를 닫고 먼저 그 채널에 @{{bot_name}}을 추가하거나 이 투표를 생성하려는 채널에서 /{{slack_command}}를 입력하십시오.\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: 이 채널에서 투표를 생성할 수 있습니다",
+  "err_para_missing": "필수 매개변수 `{{parameter}}`가 누락되었습니다.",
+  "err_para_invalid": "매개변수 `{{parameter}}`의 값 `{{value}}`이(가) 잘못되었습니다.{{error_msg}}",
   "err_change_vote_poll_closed": "마감된 투표에서는 투표를 변경할 수 없습니다.",
   "err_not_voted": "아직 투표하지 않았습니다",
   "err_close_other": "다른 사용자의 투표를 마감할 수 없습니다.",
