--- a/language/ru.json
+++ b/language/ru.json
@@ -29,6 +29,8 @@
   "btn_create": "Создать",
   "btn_cancel": "Отменить",
   "menu_text": "Меню",
+  "menu_title_confirm": "Подтвердить?",
+  "menu_are_you_sure": "Вы уверены, что хотите это сделать?",
   "menu_close_poll": "Закрыть опрос",
   "menu_reopen_poll": "Открыть опрос снова",
   "menu_delete_poll": "Удалить опрос",
@@ -38,6 +40,7 @@
   "menu_poll_action": "Действия опроса",
   "menu_user_action": "Действия пользователя",
   "menu_user_self_vote": "Посмотреть свои голоса",
+  "menu_command_info": "Command Info.",
   "menu_support": "Поддержка",
   "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: Внести свой вклад",
@@ -73,6 +76,8 @@
   "modal_ch_via_cmd_only": ":warning: Пожалуйста, введите команду /{{slack_command}} в канале, в котором вы хотите разместить опрос, а затем нажмите enter.",
   "modal_bot_not_in_ch": ":x::x::x:\nБот не находится в выбранном канале, пожалуйста, закройте это диалоговое окно и добавьте @{{bot_name}} в этот канал, \nили просто введите команду /{{slack_command}} в канале, в котором вы хотите создать этот опрос\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: Вы можете создавать опрос в этом канале",
+  "err_para_missing": "Отсутствует обязательный параметр `{{parameter}}`.",
+  "err_para_invalid": "Значение `{{value}}` для параметра `{{parameter}}` недопустимо.{{error_msg}}",
   "err_change_vote_poll_closed": "Вы не можете изменить свои голоса на закрытом опросе.",
   "err_not_voted": "Вы еще не проголосовали",
   "err_close_other": "Вы не можете закрыть опрос, созданный другим пользователем",
