--- a/language/zh_cn.json
+++ b/language/zh_cn.json
@@ -29,6 +29,8 @@
   "btn_create": "创建",
   "btn_cancel": "取消",
   "menu_text": "菜单",
+  "menu_title_confirm": "确认？",
+  "menu_are_you_sure": "您确定要这样做吗？",
   "menu_close_poll": "关闭投票",
   "menu_reopen_poll": "重新开启投票",
   "menu_delete_poll": "删除投票",
@@ -39,6 +41,7 @@
   "menu_user_action": "用户操作",
   "menu_user_self_vote": "查看您的投票结果",
   "menu_command_info": "Command Info.",
+  "menu_support": "Support",
   "menu_support_info": "Support | <mailto:{{email}}|E-Mail> | <{{link}}|URL>",
   "menu_support_contribute": ":technologist: 参与开发",
   "menu_support_source": "开源代码(Github)",
