--- a/language/de.json
+++ b/language/de.json
@@ -98,17 +98,5 @@
   "err_process_command": "Fehler bei der Verarbeitung des Befehls. Bitte überprüfe und versuche es erneut...",
   "err_invalid_command": "Ungültiger Befehl oder Teile des Befehls (außer Frage und Optionen) können fett, durchgestrichen oder kursiv formatiert werden oder Code enthalten.",
   "err_only_installer": "Nur der Benutzer, der diese App installiert hat, kann diesen Befehl verwenden.",
-  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock.",
-  "emoji_1": ":one:",
-  "emoji_2": ":two:",
-  "emoji_3": ":three:",
-  "emoji_4": ":four:",
-  "emoji_5": ":five:",
-  "emoji_6": ":six:",
-  "emoji_7": ":seven:",
-  "emoji_8": ":eight:",
-  "emoji_9": ":nine:",
-  "emoji_10": ":keycap_ten:",
-  "emoji_11": ":one::one:",
-  "emoji_12": ":one::two:"
+  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock."
 }
