--- a/language/fi.json
+++ b/language/fi.json
@@ -98,17 +98,5 @@
   "err_process_command": "Komentoa käsiteltäessä tapahtui virhe. Tarkista ja yritä uudelleen...",
   "err_invalid_command": "Virheellinen komento tai osat komennosta (paitsi kysymys ja vaihtoehdot) voivat sisältää lihavoitua yliviivausta kursiivia tai koodia",
   "err_only_installer": "Vain sovelluksen asentanut käyttäjä voi käyttää tätä komentoa",
-  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock.",
-  "emoji_1": ":one:",
-  "emoji_2": ":two:",
-  "emoji_3": ":three:",
-  "emoji_4": ":four:",
-  "emoji_5": ":five:",
-  "emoji_6": ":six:",
-  "emoji_7": ":seven:",
-  "emoji_8": ":eight:",
-  "emoji_9": ":nine:",
-  "emoji_10": ":keycap_ten:",
-  "emoji_11": ":one::one:",
-  "emoji_12": ":one::two:"
+  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock."
 }
