Send user message when Recurring Poll is done

--- a/language/en.json
+++ b/language/en.json
@@ -79,6 +79,7 @@
   "task_list": "Found `{{poll_count}}` schedule(s).\nTo delete schedule, type `/{{slack_command}} schedule delete POLL_ID`\nTo delete all finished schedules, type `/{{slack_command}} schedule delete_done`",
   "task_delete": "Poll ID: `{{poll_id}}`\n `{{deleted_count}}` schedule(s) deleted.",
   "task_delete_multiple": "`{{deleted_count}}` disabled schedule(s) deleted.",
+  "task_delete_refer_warn": "If you have a scheduled poll that refers to this poll, the schedule will stop working.",
   "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nMax run count: `{{run_max}}`",
   "task_scheduled_with_cron": "Recurring poll: enabled (Cron Expression: `{{cron}}` UTC Time Zone)\n:warning: If your scheduled is run more than once within `{{run_max_hrs}}` hours, Your scheduled will get disabled after first run.",
   "task_scheduled_when": "When:",
@@ -88,6 +89,7 @@
   "task_scheduled_post_on": "Post on:",
   "task_scheduled_post_noti": "Your scheduled poll has been posted.\nPoll ID: `{{poll_id}}`\nCMD:`{{poll_cmd}}`\nScheduled on: `{{ts}}`{{note}}",
   "task_scheduled_post_noti_error": "There was an error `{{error}}` while trying to post your scheduled poll.\nPoll ID: `{{poll_id}}`\nCMD:`{{poll_cmd}}`\nScheduled on: `{{ts}}`{{note}}",
+  "task_scheduled_post_noti_done": "Your scheduled poll has been posted, marking the completion of its final scheduled Recurring Poll.{{info}}\nPoll ID: `{{poll_id}}`\nCMD:`{{poll_cmd}}`\nScheduled on: `{{ts}}`{{note}}",
   "task_scheduled_warn_too_fast": "[Schedule][Warn] Poll ID:`{{poll_id}}` First scheduled job and next one is less than {{run_max_hrs}} hours (current {{run_current_hrs}} hours).",
   "task_scheduled_error_too_fast": "[Schedule][Error] Poll ID:`{{poll_id}}` Scheduled job run more than once in {{run_max_hrs}} hours (current {{run_current_hrs}} hours). Job is now disabled.",
   "task_usage_help": "Usage:\n`/{{slack_command}} schedule create [POLL_ID] [TS] [CH_ID] \"[CRON_EXP]\" [MAX_RUN]`\n`/{{slack_command}} schedule delete [POLL_ID]`\n`/{{slack_command}} schedule list_self`\nMore detail:`/{{slack_command}} help` or check <{{help_link}}|full document here>.",
