Send user message when Recurring Poll is done

--- a/language/ru.json
+++ b/language/ru.json
@@ -98,5 +98,21 @@
   "err_process_command": "Ошибка при обработке команды, проверьте и повторите попытку...",
   "err_invalid_command": "Неверная команда или части команды (кроме вопроса и выбора) могут содержать текст жирным шрифтом, зачеркнутый текст, курсив или код.",
   "err_only_installer": "Эта команда доступна только пользователю, который установил это приложение",
-  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock."
+  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock.",
+  "emoji_1": ":one:",
+  "emoji_2": ":two:",
+  "emoji_3": ":three:",
+  "emoji_4": ":four:",
+  "emoji_5": ":five:",
+  "emoji_6": ":six:",
+  "emoji_7": ":seven:",
+  "emoji_8": ":eight:",
+  "emoji_9": ":nine:",
+  "emoji_10": ":keycap_ten:",
+  "emoji_11": ":one::one:",
+  "emoji_12": ":one::two:",
+  "emoji_13": ":one::three:",
+  "emoji_14": ":one::four:",
+  "emoji_15": ":one::five:",
+  "emoji_16": ":one::six:"
 }
