--- a/language/fr.json
+++ b/language/fr.json
@@ -98,5 +98,21 @@
   "err_process_command": "Erreur lors du traitement de la commande, veuillez vérifier et réessayer...",
   "err_invalid_command": "Commande invalide ou parties de la commande (sauf la question et les options) peuvent contenir du texte en gras barré italique ou code",
   "err_only_installer": "Seul l'utilisateur ayant installé cette application peut utiliser cette commande",
-  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock."
+  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock.",
+  "emoji_1": ":one:",
+  "emoji_2": ":two:",
+  "emoji_3": ":three:",
+  "emoji_4": ":four:",
+  "emoji_5": ":five:",
+  "emoji_6": ":six:",
+  "emoji_7": ":seven:",
+  "emoji_8": ":eight:",
+  "emoji_9": ":nine:",
+  "emoji_10": ":keycap_ten:",
+  "emoji_11": ":one::one:",
+  "emoji_12": ":one::two:",
+  "emoji_13": ":one::three:",
+  "emoji_14": ":one::four:",
+  "emoji_15": ":one::five:",
+  "emoji_16": ":one::six:"
 }
