--- a/language/zh_cn.json
+++ b/language/zh_cn.json
@@ -96,5 +96,21 @@
   "err_process_command": "处理命令时出错，请检查并重试...",
   "err_invalid_command": "无效的命令或命令的某些部分（除问题和选择外）可能包含粗体，删除线，_斜体_或代码",
   "err_only_installer": "只有安装此应用程序的用户才能使用此命令",
-  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock."
+  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock.",
+  "emoji_1": ":one:",
+  "emoji_2": ":two:",
+  "emoji_3": ":three:",
+  "emoji_4": ":four:",
+  "emoji_5": ":five:",
+  "emoji_6": ":six:",
+  "emoji_7": ":seven:",
+  "emoji_8": ":eight:",
+  "emoji_9": ":nine:",
+  "emoji_10": ":keycap_ten:",
+  "emoji_11": ":one::one:",
+  "emoji_12": ":one::two:",
+  "emoji_13": ":one::three:",
+  "emoji_14": ":one::four:",
+  "emoji_15": ":one::five:",
+  "emoji_16": ":one::six:"
 }
