--- a/language/zh_tw.json
+++ b/language/zh_tw.json
@@ -96,5 +96,21 @@
   "err_process_command": "處理命令時出錯，請檢查並重試...",
   "err_invalid_command": "無效的命令或命令的某些部分（除問題和選擇外）可能包含粗體，刪除線，_斜體_或代碼",
   "err_only_installer": "只有安裝此應用程序的使用者才能使用此命令",
-  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock."
+  "err_mutex_lock": "[Try #{{{count_try}}] Error while attempt to acquire mutex lock.",
+  "emoji_1": ":one:",
+  "emoji_2": ":two:",
+  "emoji_3": ":three:",
+  "emoji_4": ":four:",
+  "emoji_5": ":five:",
+  "emoji_6": ":six:",
+  "emoji_7": ":seven:",
+  "emoji_8": ":eight:",
+  "emoji_9": ":nine:",
+  "emoji_10": ":keycap_ten:",
+  "emoji_11": ":one::one:",
+  "emoji_12": ":one::two:",
+  "emoji_13": ":one::three:",
+  "emoji_14": ":one::four:",
+  "emoji_15": ":one::five:",
+  "emoji_16": ":one::six:"
 }
