Add support multiple double quotation marks

--- a/language/en.json
+++ b/language/en.json
@@ -74,7 +74,7 @@
   "modal_ch_warn": ":warning: Some of channels may not be visible to the bot. This may result by impossibility to create the poll.",
   "modal_ch_warn_with_response_url": ":warning: Some of channels may not be visible to the bot. This may result by impossibility to create the poll. \nOr just type /{{slack_command}} in the channel that you want to post poll so @{{bot_name}} can create poll for you in any channel",
   "modal_ch_via_cmd_only": ":warning: Please type type /{{slack_command}} in the channel that you want to post poll then press enter.",
-  "modal_bot_not_in_ch": ":x::x::x:\nBot not in selected channel please close this dialog and add @{{bot_name}} to that channel first \nor just type /{{slack_command}} in channel that you want to create this poll\n:x::x::x:",
+  "modal_bot_not_in_ch": ":x::x::x:\nBot not in selected channel please close this dialog and `/invite \"@{{bot_name}}\"` to that channel first \nor just type /{{slack_command}} in channel that you want to create this poll\n:x::x::x:",
   "modal_bot_in_ch": ":white_check_mark: You can create poll in this channel",
   "task_list": "Found `{{poll_count}}` schedule(s).\nTo delete schedule, type `/{{slack_command}} schedule delete POLL_ID`\nTo delete all finished schedules, type `/{{slack_command}} schedule delete_done`",
   "task_delete": "Poll ID: `{{poll_id}}`\n `{{deleted_count}}` schedule(s) deleted.",
@@ -83,7 +83,7 @@
   "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nMax run count: `{{run_max}}`",
   "task_scheduled_with_cron": "Recurring poll: enabled (Cron Expression: `{{cron}}` UTC Time Zone)\n:warning: If your scheduled is run more than once within `{{run_max_hrs}}` hours, Your scheduled will get disabled after first run.",
   "task_scheduled_when": "When:",
-  "task_scheduled_when_note": "For advanced schedule and recurring the poll type `/{{slack_command}} schedule create`",
+  "task_scheduled_when_note": "For schedule poll you need to invite the bot to channel with\n`/invite \"@{{bot_name}}\"`\nFor advanced schedule and recurring the poll type\n`/{{slack_command}} schedule create`",
   "task_scheduled_now": "Now",
   "task_scheduled_later": "Select time",
   "task_scheduled_post_on": "Post on:",
