--- a/language/th.json
+++ b/language/th.json
@@ -71,7 +71,7 @@
   "modal_ch_response_url": "response_url :",
   "modal_ch_response_url_auto": "คำถามนี้จะถูกถามลงในห้องปัจจุบัน",
   "modal_ch_response_url_hint": ":warning: กรุณาอย่าเปลี่ยนข้อความด้านบน :warning:\nโดยคำถามนี้จะถูกถามลงในห้องห้องปัจจุบัน.",
-  "modal_ch_warn": ":warning: หากห้องที่เลือกเป็นรูปกุณแจให้ปิดหน้าต่างนี้แล้ว พิมพ์ @{{bot_name}} และกด Invite เพื่อให้ตัวสร้างคำถามเข้าไปอยู่ในห้องก่อน",
+  "modal_ch_warn": ":warning: หากห้องที่เลือกเป็นรูปกุณแจให้ปิดหน้าต่างนี้แล้ว พิมพ์ `/invite \"@{{bot_name}}\"` เพื่อให้ตัวสร้างคำถามเข้าไปอยู่ในห้องก่อน",
   "modal_ch_warn_with_response_url": ":warning: คุณไม่ได้พิมพ์ /{{slack_command}} ลงในห้องที่จะสร้างคำถาม\nกรุณาเลือกชื่อห้องจากด้านบน\nหากห้องที่เลือกเป็นรูปกุณแจให้ปิดหน้าต่างนี้แล้ว พิมพ์ @{{bot_name}} และกด Invite เพื่อให้ตัวสร้างคำถามเข้าไปอยู่ในห้องก่อน\n หรือใช้วิธีพิมพ์ /{{slack_command}} ในห้องที่จะสร้างคำถามก็ได้",
   "modal_ch_via_cmd_only": ":warning: กรุณาพิมพ์ /{{slack_command}} ลงในห้องที่จะสร้างคำถามและกด Enter.",
   "modal_bot_not_in_ch": ":x::x::x:\nBot ตัวสร้างคำถามไม่ได้อยู่ในห้องที่เลือก กรุณาปิดหน้าต่างนี้แล้วเพื่ม @{{bot_name}} ให้เข้าไปอยู่ในห้องก่อน\nหรือใช้วิธีพิมพ์ /{{slack_command}} ในห้องที่จะสร้างคำถาม\n:x::x::x:",
