Give user feedback when anonymously voted/unvoted.

--- a/language/de.json
+++ b/language/de.json
@@ -3,6 +3,8 @@
   "info_lang_select_hint": "Select Language",
   "info_lang_select_label": "Sprache der Umfrage:",
   "info_anonymous": ":shushing_face: Anonyme Umfrage",
+  "info_anonymous_vote": "Sie haben anonym in der Umfrage abgestimmt.",
+  "info_anonymous_unvote": "Sie haben Ihre anonyme Stimme in der Umfrage zurückgezogen.",
   "info_anonymous_notice": "HINWEIS: Der Umfrageersteller kann trotzdem sehen, wer welche Optionen gewählt hat",
   "info_limited": ":warning: Begrenzt auf {{limit}} Stimmen",
   "info_s": "s",
