--- a/language/en.json
+++ b/language/en.json
@@ -3,6 +3,8 @@
   "info_lang_select_hint": "Select Language",
   "info_lang_select_label": "Poll Language:",
   "info_anonymous": ":shushing_face: Anonymous poll",
+  "info_anonymous_vote": "You have anonymously voted in the poll.",
+  "info_anonymous_unvote": "You have anonymously unvoted in the poll.",
   "info_anonymous_notice": "NOTE: Poll creator still can see who voted which options",
   "info_limited": ":warning: Limited to `{{limit}}` vote",
   "info_s": "s",
