--- a/language/es.json
+++ b/language/es.json
@@ -3,6 +3,8 @@
   "info_lang_select_hint": "Select Language",
   "info_lang_select_label": "Idioma de la encuesta:",
   "info_anonymous": ":shushing_face: Encuesta anónima",
+  "info_anonymous_vote": "Has votado anónimamente en la encuesta.",
+  "info_anonymous_unvote": "Has retirado tu voto anónimo en la encuesta.",
   "info_anonymous_notice": "NOTA: El creador de la encuesta todavía puede ver quién votó por qué opciones",
   "info_limited": ":warning: Limitado a {{limit}} voto",
   "info_s": "s",
