--- a/language/fr.json
+++ b/language/fr.json
@@ -3,6 +3,8 @@
   "info_lang_select_hint": "Select Language",
   "info_lang_select_label": "Langue du sondage:",
   "info_anonymous": ":shushing_face: Sondage anonyme",
+  "info_anonymous_vote": "Vous avez voté anonymement dans le sondage.",
+  "info_anonymous_unvote": "Vous avez annulé votre vote anonyme dans le sondage.",
   "info_anonymous_notice": "REMARQUE : Le créateur du sondage peut toujours voir qui a voté pour quelles options",
   "info_limited": ":warning: Limité à {{limit}} vote",
   "info_s": "s",
