--- a/language/jp.json
+++ b/language/jp.json
@@ -3,6 +3,8 @@
   "info_lang_select_hint": "Select Language",
   "info_lang_select_label": "投票言語：",
   "info_anonymous": ":shushing_face: 匿名投票",
+  "info_anonymous_vote": "あなたはアンケートで匿名で投票しました。",
+  "info_anonymous_unvote": "あなたはアンケートで匿名の投票を取り消しました。",
   "info_anonymous_notice": "注意：投票作成者は誰がどの選択肢に投票したかを見ることができます",
   "info_limited": ":warning: 投票数は {{limit}} 回に制限されています",
   "info_s": "",
