--- a/language/th.json
+++ b/language/th.json
@@ -3,6 +3,8 @@
   "info_lang_select_hint": "Select Language",
   "info_lang_select_label": "Poll Language:",
   "info_anonymous": ":shushing_face: โหวตแบบไม่ระบุตัวตน",
+  "info_anonymous_vote": "คุณได้ลงคะแนนโดยไม่ระบุชื่อในโพลนี้.",
+  "info_anonymous_unvote": "คุณได้ยกเลิกการลงคะแนนโดยไม่ระบุชื่อในโพลนี้.",
   "info_anonymous_notice": "NOTE: ผู้สร้างคำถามยังสามารถเห็นว่าใครเลือกตัวเลือกใหนได้!",
   "info_limited": ":pencil2: กรุณาเลือก `{{limit}}` ตัวเลือก",
   "info_s": "",
