Add alert when user select to schedule poll but no DateTime picker to select.

--- a/language/en.json
+++ b/language/en.json
@@ -85,15 +85,16 @@
   "task_scheduled": "Poll ID: `{{poll_id}}`\nScheduled on: `{{ts}}`\nOverride CH: `{{poll_ch}}`\nMax run count: `{{run_max}}`",
   "task_scheduled_with_cron": "Recurring poll: enabled (Cron Expression: `{{cron}}` UTC Time Zone)\n:warning: If your scheduled is run more than once within `{{run_max_hrs}}` hours, Your scheduled will get disabled after first run.",
   "task_scheduled_when": "When:",
-  "task_scheduled_when_note": "For schedule poll you need to invite the bot to channel with\n`/invite \"@{{bot_name}}\"`\nFor advanced schedule and recurring the poll type\n`/{{slack_command}} schedule create`",
+  "task_scheduled_when_note": "- For schedule poll you need to invite the bot to channel with\n`/invite \"@{{bot_name}}\"`\n- For simple schedule select `{{task_scheduled_later}}` and wait for the time picker to show.\n- For advanced schedule and recurring please use\n`/{{slack_command}} schedule create`",
   "task_scheduled_now": "Now",
-  "task_scheduled_later": "Select time",
+  "task_scheduled_later": "Schedule",
   "task_scheduled_post_on": "Post on:",
   "task_scheduled_post_noti": "Your scheduled poll has been posted.\nPoll ID: `{{poll_id}}`\nCMD:`{{poll_cmd}}`\nScheduled on: `{{ts}}`{{note}}",
   "task_scheduled_post_noti_error": "There was an error `{{error}}` while trying to post your scheduled poll.\nPoll ID: `{{poll_id}}`\nCMD:`{{poll_cmd}}`\nScheduled on: `{{ts}}`{{note}}",
   "task_scheduled_post_noti_done": "Your scheduled poll has been posted, marking the completion of its final scheduled Recurring Poll.{{info}}\nPoll ID: `{{poll_id}}`\nCMD:`{{poll_cmd}}`\nScheduled on: `{{ts}}`{{note}}",
   "task_scheduled_warn_too_fast": "[Schedule][Warn] Poll ID:`{{poll_id}}` First scheduled job and next one is less than {{run_max_hrs}} hours (current {{run_current_hrs}} hours).",
   "task_scheduled_error_too_fast": "[Schedule][Error] Poll ID:`{{poll_id}}` Scheduled job run more than once in {{run_max_hrs}} hours (current {{run_current_hrs}} hours). Job is now disabled.",
+  "task_scheduled_time_missing": "Please select the date and time. If you don't see the DateTime Picker, try to re-select `{{task_scheduled_later}}` again and wait for the picker to show up in a few seconds.",
   "task_usage_help": "Usage:\n`/{{slack_command}} schedule create [POLL_ID] [TS] [CH_ID] \"[CRON_EXP]\" [MAX_RUN]`\n`/{{slack_command}} schedule delete [POLL_ID]`\n`/{{slack_command}} schedule list`\nMore detail:`/{{slack_command}} help` or check <{{help_link}}|full document here>.",
   "task_usage_stop_poll": "To stop the schedule:\n`/{{slack_command}} schedule delete {{poll_id}}`",
   "task_error_command_invalid": "Invalid command.",
